# assassin-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
app/: auth.py  cli.py  config.py  database.py  main.py  models.py  queries.sql  schema.sql
scripts/: check  format
